# web-eid-app

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  build.zsh  test.sh
.github/temporarily-disabled-workflows/: codeql-analysis.yml
.github/workflows/: cmake-linux-codeql.yml  cmake-linux-coverity.yml  cmake-linux-fedora.yml  cmake-linux-ubuntu.yml  cmake-macos.yml  cmake-windows.yml  codeql.yml  release-tarball.yml
cmake/: sbom.cmake
debian/: changelog  control  copyright  not-installed  postinst  postrm  rules  web-eid-chrome-policy.install  web-eid-chrome-policy.postinst  web-eid-chrome-policy.postrm  web-eid-chrome.install  web-eid-chrome.postinst  web-eid-firefox.install  web-eid-firefox.postinst  web-eid-firefox.postrm  web-eid-native.install  web-eid.postinst  web-eid.postrm
debian/source/: options
install/: DS_Store  HyperlinkSidebarTheme.cs.wxl  HyperlinkSidebarTheme.en.wxl  HyperlinkSidebarTheme.et.wxl  HyperlinkSidebarTheme.sk.wxl  HyperlinkSidebarTheme.xml  WelcomeDlg.wxs  WelcomeDlg2.wxs  WixUI_Minimal.wxs  WixUI_Minimal2.wxs  appicon.icns  distribution.xml  eu.webeid.chrome-policy.json  eu.webeid.firefox.json.cmake  eu.webeid.json.cmake  idemiaawppkcs11-mac.json  idemiaawppkcs11-win.json  macos-chrome-policy.plist  macos-postinstall-chrome-policy  macos-postinstall.in  onepinopenscpkcs11-mac.json  onepinopenscpkcs11-win.json  plugins.wxs  uninstall.sh  web-eid.desktop  web-eid.wxs
install/English.lproj/: Conclusion.html  Localizable.strings
install/cs.lproj/: Conclusion.html  Localizable.strings  Welcome.html
install/et.lproj/: Conclusion.html  Localizable.strings
install/ru.lproj/: Conclusion.html  Localizable.strings  Welcome.html
install/sk.lproj/: Conclusion.html  Localizable.strings  Welcome.html
scripts/: clang-format.sh  clean.sh  fail-if-git-status-dirty.sh
src/app/: CMakeLists.txt  InfoPlist.strings  MacOSXBundleInfo.plist.in  getcommandhandler.cpp  main.cpp  parseargs.hpp  web-eid.entitlements  web-eid.rc
src/controller/: CMakeLists.txt  application.cpp  application.hpp  application.mm  certandpininfo.hpp  certificateinfo.hpp  commandhandler.hpp  commands.cpp  commands.hpp  controller.cpp  controller.hpp  inputoutputmode.cpp  inputoutputmode.hpp  logging.cpp  logging.hpp  observer_ptr.hpp  qeid.hpp  readermonitorthread.hpp  registermetatypes.cpp  registermetatypes.hpp  retriableerror.cpp  retriableerror.hpp  ui.hpp  utils.hpp  writeresponse.cpp  writeresponse.hpp
src/controller/command-handlers/: authenticate.cpp  authenticate.hpp  certificatereader.cpp  certificatereader.hpp  getcertificate.cpp  getcertificate.hpp  sign.cpp  sign.hpp  signauthutils.cpp  signauthutils.hpp
src/controller/threads/: cardeventmonitorthread.hpp  commandhandlerconfirmthread.hpp  commandhandlerrunthread.hpp  controllerchildthread.cpp  controllerchildthread.hpp  readermonitorthread.hpp  waitforcardthread.hpp
src/controller/utils/: erasedata.hpp  observer_ptr.hpp  qdisablecopymove.hpp  qt_comp.hpp  utils.hpp
src/mac/: CMakeLists.txt  Info-app.plist.cmake  Info-extension.plist.cmake  InfoPlist.strings  main.mm  safari-extension.mm  shared.hpp  web-eid-safari-extension.entitlements  web-eid-safari.entitlements
src/ui/: CMakeLists.txt  CertificateWidget.cpp  CertificateWidget.hpp  certificatelistwidget.cpp  certificatelistwidget.hpp  certificatewidget.cpp  certificatewidget.hpp  dark.qss  dialog.ui  languageselect.cpp  languageselect.hpp  languageselect.qss  languageselect.ui  punycode.hpp  ui.cpp  web-eid-resources.qrc  webeiddialog.cpp  webeiddialog.hpp
src/ui/translations/: cs.ts  de.ts  en.ts  et.ts  fi.ts  fr.ts  hr.ts  nl.ts  ru.ts  sk.ts  translations.qrc
src/ui/waitingspinner/: waitingspinnerwidget.cpp  waitingspinnerwidget.hpp
tests/input-output-mode/: test.py
tests/mock-ui/: CMakeLists.txt  mock-ui.cpp  mock-ui.hpp
tests/tests/: CMakeLists.txt  changecertificatevaliduntil.hpp  getcommandhandler-mock.cpp  getcommandhandler-mock.hpp  main.cpp
